php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46086 Finfo - segfault when trying to access property
Submitted: 2008-09-15 19:15 UTC Modified: 2008-09-15 22:16 UTC
From: felipe@php.net Assigned:
Status: Closed Package: Filesystem function related
PHP Version: 5.3CVS-2008-09-15 (CVS) OS:
Private report: No CVE-ID: None
 [2008-09-15 19:15 UTC] felipe@php.net
Description:
------------
See below.

Reproduce code:
---------------
<?php

$x = new finfo;
$x->test;


Actual result:
--------------
Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread -1227983152 (LWP 12168)]
0x083c03a8 in zend_hash_quick_find (ht=0x0, arKey=0x8a22244 "test", nKeyLength=5, h=275477765, pData=0xbfc0c8e4) at /home/felipe/dev/php5/Zend/zend_hash.c:907
907             p = ht->arBuckets[nIndex];
(gdb) bt
#0  0x083c03a8 in zend_hash_quick_find (ht=0x0, arKey=0x8a22244 "test", nKeyLength=5, h=275477765, pData=0xbfc0c8e4) at /home/felipe/dev/php5/Zend/zend_hash.c:907
#1  0x083d3c42 in zend_std_read_property (object=0x8a20808, member=0x8a20fb4, type=0, tsrm_ls=0x8871070) at /home/felipe/dev/php5/Zend/zend_object_handlers.c:341
#2  0x083e0d34 in zend_fetch_property_address_read_helper_SPEC_CV_CONST (type=0, execute_data=0x8a52c40, tsrm_ls=0x8871070) at /home/felipe/dev/php5/Zend/zend_vm_execute.h:23880
#3  0x083e0e32 in ZEND_FETCH_OBJ_R_SPEC_CV_CONST_HANDLER (execute_data=0x106b7505, tsrm_ls=<value optimized out>) at /home/felipe/dev/php5/Zend/zend_vm_execute.h:23905
#4  0x083d9763 in execute (op_array=0x8a20bfc, tsrm_ls=0x8871070) at /home/felipe/dev/php5/Zend/zend_vm_execute.h:104
#5  0x083a773d in zend_eval_string (str=0xbfc0da65 "$x = new finfo; $x->test;", retval_ptr=0x0, string_name=0x88510af "Command line code", tsrm_ls=0x8871070) at /home/felipe/dev/php5/Zend/zend_execute_API.c:1110
#6  0x083a78e7 in zend_eval_string_ex (str=0xbfc0da65 "$x = new finfo; $x->test;", retval_ptr=0x0, string_name=0x88510af "Command line code", handle_exceptions=1, tsrm_ls=0x8871070)
    at /home/felipe/dev/php5/Zend/zend_execute_API.c:1145
#7  0x0844b2f0 in main (argc=3, argv=0xbfc0cd14) at /home/felipe/dev/php5/sapi/cli/php_cli.c:1169


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-09-15 22:16 UTC] scottmac@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 23 13:00:01 2026 UTC