Fixed bug #46086 (Segfault when accessing fileinfo class property)